--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Logger</title>
     <meta name="description" content="A Radio Logging Application for SWL and Amateur Radio">
-     <meta name="keywords" content="">
+    <meta name="keywords" content="">
+    <meta name="theme-color" content="gray" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
